[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Fonts/Exo2.tres" type="DynamicFont" id=1]
[ext_resource path="res://Assets/Scripts/Menu/MainMenu.gd" type="Script" id=2]
[ext_resource path="res://Assets/Fonts/Exo2Bold.tres" type="DynamicFont" id=3]

[node name="MainMenu" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
color = Color( 0.584314, 0.713726, 0.745098, 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Panel" type="Panel" parent="."]
margin_right = 400.0
margin_bottom = 1080.0

[node name="CenterContainer" type="CenterContainer" parent="Panel"]
margin_right = 375.0
margin_bottom = 1080.0
size_flags_horizontal = 7
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/CenterContainer"]
margin_left = 56.0
margin_top = 236.0
margin_right = 318.0
margin_bottom = 844.0
custom_constants/separation = 80
alignment = 1
__meta__ = {
"_edit_group_": true
}

[node name="Start" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
margin_right = 262.0
margin_bottom = 92.0
custom_fonts/font = ExtResource( 1 )
text = "Start"

[node name="Load" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 172.0
margin_right = 262.0
margin_bottom = 264.0
custom_fonts/font = ExtResource( 1 )
text = "Load"

[node name="Options" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 344.0
margin_right = 262.0
margin_bottom = 436.0
custom_fonts/font = ExtResource( 1 )
text = "Options"

[node name="Exit" type="Button" parent="Panel/CenterContainer/VBoxContainer"]
margin_top = 516.0
margin_right = 262.0
margin_bottom = 608.0
custom_fonts/font = ExtResource( 1 )
text = "Exit"

[node name="Label" type="Label" parent="."]
margin_left = 822.0
margin_top = 69.0
margin_right = 1387.0
margin_bottom = 154.0
custom_fonts/font = ExtResource( 3 )
text = "Placeholder Title"

[connection signal="button_down" from="Panel/CenterContainer/VBoxContainer/Start" to="." method="_on_Start_button_down"]
[connection signal="button_down" from="Panel/CenterContainer/VBoxContainer/Load" to="." method="_on_Load_button_down"]
[connection signal="button_down" from="Panel/CenterContainer/VBoxContainer/Options" to="." method="_on_Options_button_down"]
[connection signal="button_down" from="Panel/CenterContainer/VBoxContainer/Exit" to="." method="_on_Exit_button_down"]
